fix layout issues

--- a/main.css
+++ b/main.css
@@ -35,6 +35,10 @@ body {
   font-size: 1.5rem;
   text-align: center;
 }
+
+.how-to-play {
+  display: none;
+}
 .message {
   text-align: center;
   font-size: 1.25rem;
